// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs no-duplicate-enum-values.mdx code examples ESLint output 1`] = `
"Incorrect

enum E {
~~~~~~~~
  A = 0,
~~~~~~~~
  B = 0,
~~~~~~~~
}
~
"
`;

exports[`Validating rule docs no-duplicate-enum-values.mdx code examples ESLint output 2`] = `
"Incorrect

enum E {
~~~~~~~~
  A = 'A',
~~~~~~~~~~
  B = 'A',
~~~~~~~~~~
}
~
"
`;
